--- a/lab1/manifests/prediction-api.deployment.yaml
+++ b/lab1/manifests/prediction-api.deployment.yaml
@@ -25,6 +25,6 @@ spec:
         - name: PROJECT_ID
           value: ada2023  # use your project id
         - name: MODEL_REPO
-          value: adamodels # use your GCP bucket id
+          value: ada2023models # use your GCP bucket id
         - name: MODEL_NAME
           value: model.h5
